Fix unwanted line breaks in the middle of words in the "Find your group" dialog

--- a/metaspace/webapp/src/element-variables.scss
+++ b/metaspace/webapp/src/element-variables.scss
@@ -32,3 +32,9 @@ $--collapse-header-height: 40px;
 @include b(popover) {
   word-break: normal;
 }
+
+@include b(dialog) {
+  @include e(body) {
+    word-break: normal;
+  }
+}
